nginx-files/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
    name: nginx-deployment
    namespace: ns-nginx
spec:
    replicas: 10

    selector:
        matchLabels:
            app: nginx

    template:
        metadata:
            labels:
                app: nginx
        spec:
            containers:
            - name: nginx-container
              image: nginx
              ports:
              - containerPort: 80
