nginx-files/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
    name: nginx-ingress
    namespace: ns-nginx

    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /

spec:
    ingressClassName: nginx

    rules:
    - http:
        paths:
        - path: /
          pathType: Prefix

          backend:
            service:
              name: nginx-service
              port:
                number: 80
